--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" href="https://www.upload.ee/image/17353044/brainman-logo.png" type="image/x-icon">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.min.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 		<title>Brainman</title>
+		<meta name="title" content="Brainman" />
+		<meta name="description" content="Brainman is an advanced AI chat assistant that helps you with a wide range of tasks, from coding to creative writing, powered by cutting-edge language models." />
+		<meta name="keywords" content="AI assistant, chatbot, coding helper, creative writing, language model, artificial intelligence, chat AI, productivity tool, machine learning, natural language processing, code generation, writing assistant, problem-solving AI, tech innovation, conversational AI" />
+		<link rel="shortcut icon" href="https://www.upload.ee/image/17353044/brainman-logo.png" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="https://www.upload.ee/image/17353044/brainman-logo.png" />
+		<link rel="canonical" href="https://brainman.vercel.app" />
+		<meta name="robots" content="index, follow" />
+		<meta name="language" content="English" />
+		<meta name="geo.region" content="US" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.min.css" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
