Web url changed

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="AI assistant, chatbot, coding helper, creative writing, language model, artificial intelligence, chat AI, productivity tool, machine learning, natural language processing, code generation, writing assistant, problem-solving AI, tech innovation, conversational AI" />
 		<link rel="shortcut icon" href="https://www.upload.ee/image/17353044/brainman-logo.png" type="image/x-icon" />
 		<link rel="apple-touch-icon" href="https://www.upload.ee/image/17353044/brainman-logo.png" />
-		<link rel="canonical" href="https://brainman.vercel.app" />
+		<link rel="canonical" href="https://brainman.netlify.app/" />
 		<meta name="robots" content="index, follow" />
 		<meta name="language" content="English" />
 		<meta name="geo.region" content="US" />
